--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -24,15 +24,6 @@ clean-targets:         # directories to be removed by `dbt clean`
   - "target"
   - "dbt_packages"
 
-
-# Configuring models
-# Full documentation: https://docs.getdbt.com/docs/configuring-models
-
-# In this example config, we tell dbt to build all models in the example/ directory
-# as tables. These settings can be overridden in the individual model files
-# using the `{{ config(...) }}` macro.
-models:
-  metrics:
-    # Config indicated by + and applies to all files under models/example/
-    example:
-      +materialized: view
+vars:
+  # number of days of job history to include in metrics calculation
+  metrics__days_of_history: 90
