--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -29,3 +29,9 @@ vars:
   metrics__user_mapping_table:
   # number of days of job history to include in metrics calculation
   metrics__days_of_history: 90
+  # Service Level Objective for query speed; 95th percentile of user queries
+  # i.e., 95% of user queries should be faster than this number in seconds
+  metrics__p95_query_duration_seconds_SLO: 10
+  # Service Level Objective for query speed; 99th percentile of user queries
+  # i.e., 99% of user queries should be faster than this number in seconds
+  metrics__p99_query_duration_seconds_SLO: 60
